--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="/asset/plugins/mui/css/mui.css" />
     <link rel="stylesheet" href="/asset/css/login.css" />
     <script src="asset/plugins/mui/js/mui.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue-resource@^1.5.0/dist/vue-resource.min.js"></script>
     <script src="asset/js/vue.min.js"></script>
     <script src="asset/js/util.js"></script>
 </head>
